Version next

Version 2015.07.14.22b
* Fix location bar formatting support in Firefox 42.

Version 2015.02.06.23
* Fix toolbar pop-up menu bugs by removing legacy Australis compatibility code that is no longer needed.
* Fix location bar origin label offset in Firefox 31 ESR.

Version 2015.01.31.02b
* Drop support for Firefox 30.0 and older. Unify Australis integration.
* Fix Downloads button icon in Firefox 35+.
* Improve Downloads button integration in Menu Panel.
* When the Downloads button is in the Menu panel, or overflow panel, show the download finished animation on the panel button.

Version 2014.07.06.05
* Fix location bar status interactions with domain highlighting.
* Fix origin link shift in Firefox 32 location bar.

Version 2014.06.29.16b
* Fix gripper styling on OS X (Australis)
* Fix Windows download button attention icon (Australis).
* Add throbber toolbar item (Australis).
* Updated translations for: bg-BG, da, de, dsb, el, eo, es-ES, fr, he, hsb, ja-JP, nb-NO, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW

Version 2014.06.01.03b
* Fix download status implementation to be compatible with Firefox 29.
* Fix localization issues. (Australis)
* Improved customization event handling. (Australis)
* Support opening download manager with in-tab UI.
* Support 3rd Party download managers by exposing "status4evar.download.button.action.command" which defines a command name to execute.
* Minimize location bar progress when the location bar is focused.
* Updated translations for: da, de, dsb, el, eo, es-ES, fr, hsb, ja-JP, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW

Version 2014.05.03.06
* Fix download button icon styles. (Australis)
* Fix Windows and Linux status bar styles. OS X Still needs work. (Australis)
* Support legacy status bar panel. (Australis)

Version 2014.04.27.21
* Fix toolbars overlapping download finished animation.
* Australis style fixes.
* Australis first-run widget migration.
* Updated translations for: zh-CN

Version 2014.02.18.00b