@@ -49,10 +49,6 @@ skin status4evar-os classic/1.0 chrome/skin/pinstripe/   os=Darwin
 # Overlays
 overlay chrome://browser/content/browser.xul   chrome://status4evar/content/overlay.xul
 
-# Styles
-style   chrome://browser/content/browser.xul   chrome://status4evar/skin/version/overlay31.css appversion<=31.*
-style   chrome://browser/content/browser.xul   chrome://status4evar/skin/version/overlay34.css appversion<=34.*
-
 # XPCOM
 interfaces components/status4evar.xpt
 component  {13b3595e-7bb5-4cfe-bbfa-82c900a4d7bf} components/status4evar.js
