@@ -1,20 +1,0 @@
-/*
- * ***** BEGIN LICENSE BLOCK *****
- * 
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- * 
- * Copyright (C) 2015 Matthew Turnbull <sparky@bluefang-logic.com>. All Rights Reserved.
- * 
- * ***** END LICENSE BLOCK *****
-*/
-
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-
-#status4evar-download-button[cui-areatype="toolbar"][attention] #status4evar-download-icon
-{
-	list-style-image: url("chrome://browser/skin/downloads/download-glow.png");
-	-moz-image-region: auto;
-}
-
